# image-to-voice-app

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/voicedecoder/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: image-to-voice.cpp
app/src/main/java/com/example/voicedecoder/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/voicedecoder/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
